# sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: Cargo.toml
config/src/: events.rs  keybindings.rs  lib.rs  watcher.rs
lunaris-input-client/: Cargo.toml
lunaris-input-client/src/: lib.rs
module-sdk/: Cargo.toml  host.ts  index.ts  module.ts  package.json  postmsg.ts  tsconfig.json
module-sdk/src/: host.rs  lib.rs  waypointer.rs
module-sdk/wit/: host.wit  waypointer.wit
modules/: Cargo.toml
modules/src/: lib.rs
os-sdk/: Cargo.toml  build.rs
os-sdk/bindings/: ConfigValue.ts  GraphQueryResult.ts  GraphRow.ts  ShellEvent.ts  SurfaceTokens.ts
os-sdk/proto/: clipboard_api.proto  event.proto
os-sdk/src/: annotations.rs  clipboard.rs  config.rs  event.rs  event_consumer.rs  graph.rs  lib.rs  mock.rs  presence.rs  shell_types.rs  spatial.rs  timeline.rs
os-sdk/tests/: clipboard_integration.rs  event_consumer_integration.rs  unix_implementations.rs
os-sdk/typescript/: shell.ts
permissions/: Cargo.toml
permissions/src/: lib.rs  token.rs
src-tauri/src/: theme.rs
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/window-controls/: WindowControls.svelte
tauri-plugin-clipboard/: Cargo.toml  README.md  build.rs  index.ts  package.json
tauri-plugin-clipboard/permissions/autogenerated/: reference.md
tauri-plugin-clipboard/permissions/schemas/: schema.json
tauri-plugin-clipboard/src/: commands.rs  lib.rs  types.rs
tauri-plugin-menu/: Cargo.toml  build.rs  index.ts  package-lock.json  package.json
tauri-plugin-menu/permissions/autogenerated/: reference.md
tauri-plugin-menu/permissions/autogenerated/commands/: activate_tab.toml  add_button.toml  add_tab.toml  remove_button.toml  remove_tab.toml  reorder_tabs.toml  set_breadcrumb.toml  set_button_enabled.toml  set_center_content.toml  set_search_mode.toml  update_tab.toml
tauri-plugin-menu/permissions/schemas/: schema.json
tauri-plugin-menu/protocols/: lunaris-titlebar-v1.xml
tauri-plugin-menu/src/: commands.rs  lib.rs  protocol.rs  wayland.rs
tauri-plugin-portal/: Cargo.toml  README.md  build.rs  index.ts  package.json
tauri-plugin-portal/permissions/autogenerated/: reference.md
tauri-plugin-portal/permissions/autogenerated/commands/: open_uri.toml  pick_directory.toml  pick_file.toml  save_file.toml  save_files.toml
tauri-plugin-portal/permissions/schemas/: schema.json
tauri-plugin-portal/src/: api.rs  commands.rs  lib.rs  portal_proxy.rs  request_helper.rs  types.rs
tauri-plugin-shell/: Cargo.toml  build.rs  index.ts  package.json
tauri-plugin-shell/permissions/autogenerated/: reference.md
tauri-plugin-shell/permissions/autogenerated/commands/: annotation_clear.toml  annotation_get.toml  annotation_set.toml  annotation_subscribe.toml  annotation_subscribe_prepare.toml  annotation_subscribe_start.toml  annotation_unsubscribe.toml  presence_clear.toml  presence_set.toml  spatial_hint.toml  timeline_record.toml
tauri-plugin-shell/permissions/schemas/: schema.json
tauri-plugin-shell/src/: commands.rs  lib.rs
theme/: Cargo.toml
theme/src/: file.rs  lib.rs  watcher.rs
ui-kit/src/: app.css
ui-kit/src-tauri/: Cargo.toml
ui-kit/src/lib/: motion.css  transitions.ts
ui-kit/src/lib/components/ui/: index.ts
ui-kit/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar.svelte  index.ts
ui-kit/src/lib/components/ui/badge/: badge.svelte
ui-kit/src/lib/components/ui/button/: button.svelte
ui-kit/src/lib/components/ui/color-picker/: ColorPicker.svelte
ui-kit/src/lib/components/ui/command/: command-empty.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-list.svelte  command-separator.svelte  command-shortcut.svelte  command.svelte  index.ts
ui-kit/src/lib/components/ui/confirm-dialog/: confirm-dialog.svelte  index.ts
ui-kit/src/lib/components/ui/days-picker/: days-picker.svelte  index.ts
ui-kit/src/lib/components/ui/group/: group.svelte
ui-kit/src/lib/components/ui/input/: input.svelte
ui-kit/src/lib/components/ui/number-input/: index.ts  number-input.svelte
ui-kit/src/lib/components/ui/popover/: index.ts  popover-content.svelte
ui-kit/src/lib/components/ui/popover-select/: index.ts  popover-select.svelte
ui-kit/src/lib/components/ui/position-picker/: index.ts  position-picker.svelte
ui-kit/src/lib/components/ui/row/: index.ts  row.svelte
ui-kit/src/lib/components/ui/scroll-area/: scroll-area.svelte
ui-kit/src/lib/components/ui/select/: select.svelte
ui-kit/src/lib/components/ui/sidebar/: Sidebar.svelte  SidebarContent.svelte  SidebarGroup.svelte  SidebarGroupLabel.svelte  SidebarHeader.svelte  SidebarInset.svelte  SidebarMenu.svelte  SidebarMenuButton.svelte  SidebarMenuItem.svelte  SidebarProvider.svelte  SidebarRail.svelte  SidebarTrigger.svelte  context.svelte.ts  index.ts
ui-kit/src/lib/components/ui/slider/: slider.svelte
ui-kit/src/lib/components/ui/switch/: switch.svelte
ui-kit/src/lib/components/ui/time-input/: index.ts  time-input.svelte
ui-kit/src/lib/components/ui/toggle/: toggle.svelte
ui-kit/src/lib/components/ui/tooltip/: index.ts  tooltip.svelte
ui-kit/src/lib/components/ui/value-slider/: index.ts  value-slider.svelte
ui-kit/src/lib/components/ui/window-controls/: WindowControls.svelte
