[package]
name = "lunaris-input-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Lunaris compositor input services (org.lunaris.App1 and org.lunaris.InputManager1)"
license = "GPL-3.0-only"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
