[package]
name = "os-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
prost = "0.13"
tempfile = "3"
