[package]
name = "os-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
uuid = { version = "1", features = ["v5", "v7"] }
libc = "0.2"

toml = "0.8"
notify = "6"
dirs = "5"

[build-dependencies]
prost-build = "0.13"

toml = "0.8"
notify = "6"
dirs = "5"

[dev-dependencies]
prost = "0.13"
tempfile = "3"
