[package]
name = "tauri-plugin-lunaris-clipboard"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Lunaris clipboard read/write/subscribe/history"
license = "GPL-3.0-only"
links = "tauri-plugin-lunaris-clipboard"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
log = "0.4"
thiserror = "1"
os-sdk = { path = "../os-sdk" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
