[package]
name = "tauri-plugin-lunaris-menu"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for the Lunaris titlebar protocol"
license = "GPL-3.0-only"
links = "tauri-plugin-lunaris-menu"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wayland-client = "0.31"
wayland-scanner = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["client"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
