[package]
name = "tauri-plugin-lunaris-portal"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin wrapping the xdg-desktop-portal FileChooser and OpenURI interfaces"
license = "GPL-3.0-only"
links = "tauri-plugin-lunaris-portal"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
log = "0.4"
thiserror = "2"
rand = "0.8"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
