# Empty [workspace] declaration so this Tauri app is treated as
# standalone instead of being auto-pulled into sdk/Cargo.toml's
# workspace (cargo walks up looking for a workspace root). Matches
# the pattern desktop-shell/src-tauri and app-settings/src-tauri use.
[workspace]

[package]
name = "lunaris-ui-kit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lunaris_ui_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lunaris-theme = { path = "../../theme" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dev-dependencies]
tempfile = "3"
